// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResultsPage component should render with other elements, depends on props 1`] = `
<div
  className="wrapper"
>
  <Memo(Connect(MovieListContainer)) />
  <div
    className="loading"
  >
    <Spinner />
  </div>
  <Memo(Connect(FooterContainer)) />
</div>
`;

exports[`SearchResultsPage component should render without crashing 1`] = `
<div
  className="wrapper"
>
  <React.Fragment>
    <Header />
    <Memo(Connect(MovieInfoContainer)) />
  </React.Fragment>
  <Memo(Connect(MovieListContainer)) />
  <div
    className="loading"
  />
</div>
`;
